testsuite/poke.pkl/struct-types-diag-5.pk
/* { dg-do compile } */

/* Struct elements can't have duplicated names.  */

deftype Packet = struct
 {
   int foo;
   long bar;
   string foo;  /* { dg-error "" } */
 };
